# legislative-intelligence

./: .env.example  .gitignore  HANDOFF.md  NEXT_INSTANCE_PROMPT.md  NEXT_SESSION_PROMPT.md  PROJECT_NOTES.md  README.md  pyproject.toml  railway.json  requirements.txt
docs/: ROADMAP.md  council-feedback-2026-01-22.md  external_sources_research.md  handoff-2026-01-22-v2.md  handoff-2026-01-22.md
scripts/: demo.py  download_usc.py  export_for_aura.py  extract_historical_pls.py  fix_section_names_aura.py  link_laws.py  migrate_to_aura.py
src/: __init__.py  models.py
src/adapters/: __init__.py  congress_gov.py  usc_xml.py
src/analysis/: __init__.py  bill_narrator.py  llm_summarizer.py  text_diff.py
src/api/: __init__.py  main.py  narrative_endpoints.py  story.py
src/enrichment/: __init__.py  congress_gov_enricher.py
src/graph/: __init__.py  neo4j_store.py
src/ingest/: __init__.py  pipeline.py
src/narrative/: __init__.py  generator.py
src/parsers/: __init__.py  citations.py
src/services/: section_text.py
src/web/: __init__.py
src/web/templates/: index.html
tests/: __init__.py  test_citations.py  test_llm_summarizer.py  test_text_diff.py
